hphp/test/slow/await_as_an_expression/error/fn_call2.php.expectf

Fatal error: `await` cannot be used as an expression inside another await expression, unless unstable feature: `pipe_await` is enabled. Pull the inner `await` out into its own statement. in %s/fn_call2.php on line 17
